--- a/final_index_with_title_tw_audio_bg.html
+++ b/final_index_with_title_tw_audio_bg.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>苒紈 & 詩芹：來自未來的我們 ✉️</title>
+  <title>芊絨 & 詩芹：來自未來的我們 ✉️</title>
   <style>
     body {
       text-align: center;
@@ -61,6 +61,29 @@
       from { background-position: 0 0; }
       to { background-position: 0 1000px; }
     }
+    .locked-card {
+      background-color: rgba(255, 245, 247, 0.8);
+      border: 2px dashed #f9a;
+      padding: 20px;
+      border-radius: 20px;
+      text-align: center;
+      color: #e05c7b;
+      cursor: pointer;
+      position: relative;
+    }
+    .locked-card:hover {
+      background-color: #fff5f9;
+    }
+    .locked-card .emoji {
+      font-size: 2em;
+      display: block;
+      margin-bottom: 10px;
+    }
+    .locked-card .countdown {
+      font-size: 0.9em;
+      color: #c55;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -79,23 +102,71 @@
     <img class="bottom-img" src="four_months.png" alt="四月插圖">
     <h2>🧭 四月出發：這段新旅程的開始</h2>
     <p>
-第一天到曼谷的時候，我們就想著你一定在機場✈️緊張兮兮又很期待吧～  
-好想知道你是不是一邊過海關一邊想著「我真的要來這裡一年嗎？」（笑）🤯  
-我們那時候還賭你第一天會不會直接爆買零食🛍️，快回報啊老師小姐！
+第一天到曼谷的時候，我們就想著你一定在機場✈️緊張兮兮又很期待吧～
+好想知道你是不是一邊過海關一邊想著「我真的要來這裡一年嗎？」
+（笑）🤯
+我們那時候還賭你第一天會不會直接爆買零食🛍️
+快回報啊乃昀老師！
 
-其實你踏出那一步，我們真的超佩服的。很多人會猶豫、會怕變化，但你就是那種默默把事情做到好的人。  
-我們每次聊到你，都會笑著說「那孩子現在應該忙著幫學生改作業吧～」  
+其實你踏出那一步，我們真的超佩服的。很多人會猶豫、會怕變化，但你就是那種默默把事情做到好的人。
+我們每次聊到你，都會笑著說「那孩子現在應該忙著幫學生改作業吧～」
 也拜託你記得，如果哪天晚上忽然很想吃鹽酥雞，或只是想講幹話，我們永遠都在線上！📱
     </p>
-
     <div class="speaker">🎙️ 芊絨</div>
     <audio controls preload="auto" style="width: 100%; margin-top: 5px;">
       <source src="normalized_april_qianrong.mp3" type="audio/mpeg">
     </audio>
-
     <div class="speaker">🎙️ 詩芹</div>
     <audio controls preload="auto" style="width: 100%; margin-top: 5px;">
       <source src="normalized_april_shiqin.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <div class="card">
+    <img class="bottom-img" src="eight_months_tea.png" alt="八月插圖">
+    <h2>🫖 八月仲夏：生活穩定了嗎？</h2>
+    <p>
+回想八月，天氣一定還是好熱好熱。
+☀️
+你應該早就找到喜歡的早餐店了吧～
+還是還在吃7-11？
+我們會一邊開玩笑說「乃昀現在應該在幫學生看報告吧」
+一邊幻想你說你要來載我們哈哈哈
+🛵
+希望你生活順順的，也還是有很多小確幸。
+如果壓力大到不行，就來聽我們兩個的碎念
+（或者學我們抱怨生活）
+    </p>
+    <div class="speaker">🎙️ 芊絨</div>
+    <audio controls preload="auto" style="width: 100%; margin-top: 5px;">
+      <source src="normalized_august_qianrong.mp3" type="audio/mpeg">
+    </audio>
+    <div class="speaker">🎙️ 詩芹</div>
+    <audio controls preload="auto" style="width: 100%; margin-top: 5px;">
+      <source src="normalized_august_shiqin.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <div class="card">
+    <img class="bottom-img" src="march_final_art.png" alt="三月插圖">
+    <h2>🌅 三月歸期：倒數的風景</h2>
+    <p>
+這段旅程已經快到尾聲了。
+😢
+我們在討論著你回來的第一頓飯要吃什麼
+（鹽酥雞+綠豆沙是必須的）
+你那邊的天空是不是不一樣？
+你走的路是不是每一步都在提醒你「我真的做到了」？
+最後這個月，請你放心地看風景，好好告別那邊的生活。
+我們會張開雙手迎接你回來。
+    </p>
+    <div class="speaker">🎙️ 芊絨</div>
+    <audio controls preload="auto" style="width: 100%; margin-top: 5px;">
+      <source src="normalized_march_qianrong.mp3" type="audio/mpeg">
+    </audio>
+    <div class="speaker">🎙️ 詩芹</div>
+    <audio controls preload="auto" style="width: 100%; margin-top: 5px;">
+      <source src="normalized_march_shiqin.mp3" type="audio/mpeg">
     </audio>
   </div>
 
