--- a/final_index_with_title_tw_audio_bg.html
+++ b/final_index_with_title_tw_audio_bg.html
@@ -45,29 +45,16 @@
       border-radius: 16px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
-    .locked-overlay {
-      background-color: rgba(255, 245, 247, 0.8);
-      border: 2px dashed #f9a;
-      padding: 20px;
-      border-radius: 20px;
-      color: #e05c7b;
-      cursor: pointer;
-      margin: 30px auto;
-      max-width: 500px;
-    }
-    .locked-overlay .emoji {
-      font-size: 2em;
-      display: block;
-      margin-bottom: 10px;
-    }
-    .locked-overlay .countdown {
-      font-size: 0.9em;
-      color: #c55;
-      margin-top: 10px;
+    .locked {
+      display: none;
     }
   </style>
 </head>
 <body>
+  <audio autoplay loop preload="auto" style="display: none;">
+    <source src="https://drive.google.com/uc?export=download&id=1SAriFBbif2OlkqUas5ppzs0TgCZA9CKC" type="audio/mpeg">
+  </audio>
+
   <h1>芊絨 & 詩芹：來自未來的我們 ✉️</h1>
 
   <div class="card">
@@ -88,34 +75,10 @@
     <audio controls><source src="normalized_april_shiqin.mp3" type="audio/mpeg"></audio>
   </div>
 
-  <div id="august-card" class="locked-overlay" onclick="handleUnlock('august')">
-    <span class="emoji">🔒</span>
-    🫖 八月仲夏：生活穩定了嗎？<br>
-    ⏳ 還有 <span id="august-count"></span> 天解鎖！
-  </div>
-
-  <div id="march-card" class="locked-overlay" onclick="handleUnlock('march')">
-    <span class="emoji">🔒</span>
-    🌅 三月歸期：倒數的風景<br>
-    ⏳ 還有 <span id="march-count"></span> 天解鎖！
-  </div>
-
-  <script>
-    const unlockCounts = { august: 0, march: 0 };
-    const unlockThreshold = 3;
-
-    function handleUnlock(id) {
-      unlockCounts[id]++;
-      if (unlockCounts[id] < unlockThreshold) {
-        alert("你想我！要打給我 ❤️");
-      } else {
-        const container = document.getElementById(id + '-card');
-        const fullContent = document.createElement('div');
-        fullContent.innerHTML = id === 'august' ? `
-          <div class="card">
-            <img class="bottom-img" src="eight_months_tea.png" alt="八月插圖">
-            <h2>🫖 八月仲夏：生活穩定了嗎？</h2>
-            <p>
+  <div id="august-card" class="card locked">
+    <img class="bottom-img" src="eight_months_tea.png" alt="八月插圖">
+    <h2>🫖 八月仲夏：生活穩定了嗎？</h2>
+    <p>
 回想八月，天氣一定還是好熱好熱。
 ☀️
 你應該早就找到喜歡的早餐店了吧～
@@ -126,16 +89,17 @@
 希望你生活順順的，也還是有很多小確幸。
 如果壓力大到不行，就來聽我們兩個的碎念
 （或者學我們抱怨生活）
-            </p>
-            <div class="speaker">🎙️ 芊絨</div>
-            <audio controls><source src="normalized_august_qianrong.mp3" type="audio/mpeg"></audio>
-            <div class="speaker">🎙️ 詩芹</div>
-            <audio controls><source src="normalized_august_shiqin.mp3" type="audio/mpeg"></audio>
-          </div>` : `
-          <div class="card">
-            <img class="bottom-img" src="march_final_art.png" alt="三月插圖">
-            <h2>🌅 三月歸期：倒數的風景</h2>
-            <p>
+    </p>
+    <div class="speaker">🎙️ 芊絨</div>
+    <audio controls><source src="normalized_august_qianrong.mp3" type="audio/mpeg"></audio>
+    <div class="speaker">🎙️ 詩芹</div>
+    <audio controls><source src="normalized_august_shiqin.mp3" type="audio/mpeg"></audio>
+  </div>
+
+  <div id="march-card" class="card locked">
+    <img class="bottom-img" src="march_final_art.png" alt="三月插圖">
+    <h2>🌅 三月歸期：倒數的風景</h2>
+    <p>
 這段旅程已經快到尾聲了。
 😢
 我們在討論著你回來的第一頓飯要吃什麼（鹽酥雞+綠豆沙是必須的）
@@ -143,26 +107,38 @@
 你走的路是不是每一步都在提醒你「我真的做到了」？
 最後這個月，請你放心地看風景，好好告別那邊的生活。
 我們會張開雙手迎接你回來。
-            </p>
-            <div class="speaker">🎙️ 芊絨</div>
-            <audio controls><source src="normalized_march_qianrong.mp3" type="audio/mpeg"></audio>
-            <div class="speaker">🎙️ 詩芹</div>
-            <audio controls><source src="normalized_march_shiqin.mp3" type="audio/mpeg"></audio>
-          </div>`;
-        container.replaceWith(fullContent);
+    </p>
+    <div class="speaker">🎙️ 芊絨</div>
+    <audio controls><source src="normalized_march_qianrong.mp3" type="audio/mpeg"></audio>
+    <div class="speaker">🎙️ 詩芹</div>
+    <audio controls><source src="normalized_march_shiqin.mp3" type="audio/mpeg"></audio>
+  </div>
+
+  <script>
+    function showCountdown(id, targetDate) {
+      const now = new Date();
+      const date = new Date(targetDate);
+      const diff = Math.ceil((date - now) / (1000 * 60 * 60 * 24));
+      if (diff <= 0) {
+        document.getElementById(id).classList.remove("locked");
+      } else {
+        const msg = document.createElement("div");
+        msg.innerHTML = `🔒 還有 ${diff} 天才開放喔～<br>點太多次會被我們發現你想我們啦！🥹❤️`;
+        msg.style.color = '#d55';
+        document.getElementById(id).appendChild(msg);
+        let clicks = 0;
+        document.getElementById(id).onclick = () => {
+          clicks++;
+          if (clicks >= 3) {
+            document.getElementById(id).classList.remove("locked");
+          } else {
+            alert("你想我！要打給我 ❤️");
+          }
+        }
       }
     }
-
-    function updateCountdown(targetId, dateStr) {
-      const now = new Date();
-      const target = new Date(dateStr);
-      const diff = Math.ceil((target - now) / (1000 * 60 * 60 * 24));
-      document.getElementById(targetId + '-count').innerText = diff;
-    }
-
-    updateCountdown('august', '2025-10-10');
-    updateCountdown('march', '2026-03-05');
+    showCountdown("august-card", "2025-10-10");
+    showCountdown("march-card", "2026-03-05");
   </script>
-
 </body>
 </html>
